// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`context-files end-to-end 1`] = `
[
  {
    "content": [
      {
        "text": "These files are part of your context. This is the latest information about the content of each file.
From now on, whenever any of these files are updated by the user, you will get a message letting you know.
- \`node/test/tmp/poem.txt\`
\`\`\`
Moonlight whispers through the trees,
Silver shadows dance with ease.
Stars above like diamonds bright,
Paint their stories in the night.

\`\`\`",
        "type": "text",
      },
      {
        "text": "check out this file",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`context-files multiple, weird path names 1`] = `
[
  {
    "content": [
      {
        "text": "These files are part of your context. This is the latest information about the content of each file.
From now on, whenever any of these files are updated by the user, you will get a message letting you know.
- \`node/test/tmp/poem.txt\`
\`\`\`
Moonlight whispers through the trees,
Silver shadows dance with ease.
Stars above like diamonds bright,
Paint their stories in the night.

\`\`\`
- \`node/test/tmp/poem 3.txt\`
\`\`\`
poem3

\`\`\`",
        "type": "text",
      },
      {
        "text": "check out this file",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`unit tests > sends update if the file was edited pre-insert 1`] = `
{
  "content": [
    {
      "text": "These files are part of your context. This is the latest information about the content of each file.
From now on, whenever any of these files are updated by the user, you will get a message letting you know.
- \`node/test/tmp/poem.txt\`
\`\`\`diff
Index: node/test/tmp/poem.txt
===================================================================
--- node/test/tmp/poem.txt	previous
+++ node/test/tmp/poem.txt	current
@@ -1,3 +1,3 @@
-Moonlight whispers through the trees,
+changed first line
 Silver shadows dance with ease.
 Stars above like diamonds bright,

\`\`\`",
      "type": "text",
    },
  ],
  "role": "user",
}
`;
